fix: dont hide rightHeaderElement when sidebar collapsed

--- a/src/components/common/Sidebar/styles.scss
+++ b/src/components/common/Sidebar/styles.scss
@@ -133,6 +133,11 @@
     }
 
     &__header {
+      padding: 0;
+      margin-bottom: 0.5rem;
+    }
+
+    &__logo-link {
       display: none;
     }
 
